--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
     <div id="contenidoTest" style="display: none;">
         <header>
             <img src="images/logo.png" alt="logo del preuniversitario">
-            <h2>SIMULADOR UNACH<br>PREUNIVERSITARIO SAN MARCOS</h2>
+            <h2>SIMULADOR UNACH<br>PREUNIVERSITARIO SAN MARCOS Y ARESMENDI</h2>
             <button id="reiniciarBtn">Reiniciar Test</button>
             <p id="timer">Tiempo restante: 15:00</p>
         </header>
