--- a/index.html
+++ b/index.html
@@ -662,8 +662,8 @@
                 <input type="radio" name="q20" value="d">352,52<br>
             </div>
 
-            <button id="prevButton" onclick="preguntaAnterior()" disabled>Anterior</button>
-            <button id="nextButton" onclick="siguientePregunta()">Siguiente</button>
+            <button id="prevButton" disabled>Anterior</button>
+            <button id="nextButton">Siguiente</button>
             <h3 id="resultado"></h3>
             <h3 id="puntaje"></h3>
             <div id="detalleResultados"></div>
