--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="simulador, unach, ingreso, universidad, practic">
     <meta name="author" content="Jovanna Rojas Malave">
     <title>MINI-SIMULADOR 1 UNACH</title>
+    <link rel="icon" href="favicon.ico">
     <!--
     Autor: Jovanna Rojas Malave
     GitHub: https://github.com/jovarojas
